updating minor spacing issue

--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -27,7 +27,7 @@
 
 .section {
   h3 {
-    margin-top: 16px;
+    margin-top: 32px;
 
     @include breakpoint(lima) {
       margin-top: 64px;
